# Sarcopenia-Risk-Assessment

./: .gitignore  README.md  compare_skels.py  counting.py  counting3.py  counting_analysis.py  counting_merged.py  dist_overlap.py  dist_overlap_2.py  filter.py  fix.py  fold.py  fold_2.py  fold_info.py  fold_to_pkl.py  fold_to_zip.py  gait_analysis.py  inference_analysis.py  merged_to_merged124.py  mp4_to_skeleton.py  mp4_to_skeleton_blank.py  mp4_to_skeleton_poseformer.py  overlap3.py  overlap3_originalsubjects.py  partition.py  partition_assign_skeletons.py  partition_dummy.py  partition_inference.py  partition_info.py  partition_info_latex.py  partition_optimization.py  partition_optimization_old.py  partition_plot_assignment.py  partition_plot_reuse.py  partition_plot_sankey.py  partition_videos_zip.py  pkl_to_skels.py  plot.py  plot2.py  plot3.py  (+24 more)
csvs/: clips.csv  fold_all.csv  sliding_window_subject_idx_to_subject_id.csv  subjects.csv  subjects_malefemale.csv  subjects_r.csv
csvs_old/: clips.csv  clips_merged.csv  subjects.csv
folds/: fold1_subjects.csv  fold2_subjects.csv  fold3_subjects.csv  fold4_subjects.csv
folds_JUDY/: fold1_subjects.csv  fold2_subjects.csv  fold3_subjects.csv  fold4_subjects.csv
folds_OG/: fold1_subjects.csv  fold2_subjects.csv  fold3_subjects.csv  fold4_subjects.csv
folds_diverse/: fold1_subjects.csv  fold2_subjects.csv  fold3_subjects.csv  (+1 more)
skateformer/: .gitignore  inference.py  main.py  pyproject.toml  train.py
skateformer/config/sarcopenia/: inference.yaml  train_base.yaml
skateformer/feeders/: feeder_ntu.py  feeder_ntu2.py
(+5 files in other folders)
